tests: updated design update 5 - fixed vertical align of th tag

--- a/doc/assets/less/app/views/tests.less
+++ b/doc/assets/less/app/views/tests.less
@@ -124,4 +124,9 @@
         }
     }
 
+    th
+    {
+        vertical-align : middle;
+    }
+
 }
